[project]
name = "synapse-dbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.15.0",
    "azure-synapse-artifacts>=0.18.0",
    "azure-synapse-spark>=0.7.0",
    "azure-synapse-managedprivateendpoints>=0.4.0",
    "azure-mgmt-synapse>=2.0.0",
    "pyodbc>=5.0.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
